# pymkm

./: .buildinfo  .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build_and_verify.bat  genindex.html  git_cleanup_ignored_files.sh  git_tag_and_push.sh  index.html  init_and_push_to_github_first_time.sh  objects.inv  py-modindex.html  pymkm.biology.html  pymkm.biology.oxygen_effect.html  pymkm.data.defaults.fluka_2020_0.html  pymkm.data.defaults.geant4_11_3_0.html  pymkm.data.defaults.html  pymkm.data.defaults.mstar_3_12.html  pymkm.data.html  pymkm.html  pymkm.io.data_registry.html  pymkm.io.html  pymkm.io.stopping_power.html  pymkm.io.table_set.html  pymkm.mktable.compute.html  pymkm.mktable.core.html  pymkm.mktable.html  pymkm.mktable.plot.html  pymkm.physics.html  pymkm.physics.particle_track.html  pymkm.physics.specific_energy.html  pymkm.sftable.compute.html  pymkm.sftable.core.html  pymkm.sftable.html  pymkm.sftable.plot.html  pymkm.utils.geometry_tools.html  pymkm.utils.html  (+8 more)
_modules/: index.html
_sources/: index.rst.txt  pymkm.biology.oxygen_effect.rst.txt  pymkm.data.defaults.fluka_2020_0.rst.txt  pymkm.data.defaults.geant4_11_3_0.rst.txt  pymkm.data.rst.txt  pymkm.io.data_registry.rst.txt  pymkm.io.rst.txt  pymkm.io.stopping_power.rst.txt  pymkm.mktable.rst.txt  pymkm.physics.particle_track.rst.txt  pymkm.rst.txt  pymkm.sftable.core.rst.txt
examples/: 01_example_use_stopping_power_tables.py  02_example_compare_stopping_power_table_sources.py  04_example_smk_table_generation.py  05_example_osmk_table_generation_and_plot_OER.py  (+11 more)
(+310 files in other folders)
