[build-system]
requires = [ "setuptools>=61.0", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "pymkm"
version = "0.0.5"
description = "Microdosimetric Kinetic Model utilities for radiobiology research and hadrontherapy."
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "MKM", "RBE", "radiobiology", "hadrontherapy", "LET",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "matplotlib", "numpy", "pandas", "scipy", "tabulate", "tqdm",]
[[project.authors]]
name = "Giuseppe Magro"
email = "giuseppe.magro@cnao.it"

[[project.authors]]
name = "Vittoria Pavanello"
email = "vittoria.pavanello@cnao.it"

[[project.authors]]
name = "Andrea Mairani"
email = "andrea.mairani@med.uni-heidelberg.de"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest", "pytest-cov", "black", "mypy",]

[project.urls]
Homepage = "https://github.com/BeppeMagro/pymkm"
Repository = "https://github.com/BeppeMagro/pymkm"
Issues = "https://github.com/BeppeMagro/pymkm/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.setuptools.package-data]
"pymkm.data" = [ "**/*.txt", "elements.json",]

[tool.setuptools.packages.find]
where = [ "pymkm",]
